# MunVM

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/mun/: alloc.h  array.h  asm.h  ast.h  bitfield.h  bitvec.h  common.h  function.h  iterator.h  location.h  native.h  parser.h  scope.h  sstream.h  stack_frame.h  table.h  type.h
include/mun/codegen/: compiler.h  graph.h  instruction.h  interference_graph.h  liveness.h  lsra.h  move_resolver.h  range.h  regalloc.h  use.h
include/mun/x64/: core.h  frame.h
src/: alloc.c  array.c  asm.c  ast.c  bitvec.c  location.c  main.c  mun.c  parser.c  scope.c  sstream.c  table.c  type.c
src/codegen/: all.h  blocks.c  blocks.h  compiler.c  definitions.c  definitions.h  finger.c  flow_graph.c  graph.c  instructions.c  interference_graph.c  liveness.c  lsra.c  move_resolver.c  parallel_move.c  parallel_move.h  range.c
src/codegen/x64/: compile.c  compile.h  compiler.c  resolver.c
src/x64/: core.c
